# DevOps-Course-Starter

./: .dockerignore  .env.template  .gitignore  .travis.yml  .travis_docker.sh  Dockerfile  README.md  Vagrantfile  api_helper.py  app.py  card.py  card_list_view_model.py  card_view_model.py  docker-compose.yml  env_vars.py  gunicorn.conf.py  main.tf  mock_response.py  outputs.tf  pyproject.toml  requirements.txt  run-prod.sh  session_items.py  sorter.py  test_get_cards.py  test_integration.py  test_selenium.py  trello_helper.py  variables.tf  view_model.py
api/: api_helper.py  app_config.py  auth.py  auth_config.py  itask_data_manager.py  mongo_config.py  mongo_helper.py  session_items.py  sorter.py  trello_config.py  trello_helper.py
documentation/: 1_context.drawio  2_container.drawio  3_component.drawio
models/: card.py  card_list.py  card_list_view_model.py  card_view_model.py  role.py  user.py  view_model.py
templates/: index.html  layout.html
test/: .env.test  test_get_cards.py  test_integration.py
tests/: .env.test  test_constants.py  test_integration.py  test_mongo_constants.py
tests_e2e/: test_selenium.py
