[tool.poetry]
name = "perfect-todo-app"
version = "0.1.0"
description = ""
authors = ["Perry Jones <perry.jones@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.8" ###
Flask = "1.1.1" ###
gunicorn = "20.0.4" ####
python-dotenv = "0.12.0" ###
requests = "2.24.0" ###
pymongo = {extras = ["srv"], version = "^3.11.2"}
oauthlib = "^3.1.0"
flask-login = "^0.5.0"

[tool.poetry.dev-dependencies]
pylint = "2.5.2"
pytest = "5.4.3"
selenium = "3.141.0"
beautifulsoup4 = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
